tests/negative_fixtures/structured_type_mismatch.shx
record User {
  name: string;
  age: number;
}

let invalidUser: User = { name: "Ada", age: "thirty-two" };
